kubernetes/zeus/zeus/web-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: web
  namespace: default
spec:
  replicas: 6
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 4
      maxUnavailable: 2
  minReadySeconds: 5
  revisionHistoryLimit: 10
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: zeus
          image: gcr.io/zeus-176020/zeus:latest
          imagePullPolicy: Always
          args: ['zeus', 'web', '--host=0.0.0.0', '--port=8080']
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 60
            timeoutSeconds: 1
          volumeMounts:
            - name: nfs
              mountPath: '/mnt/repo-cache'
            - name: 'service-account'
              mountPath: '/var/run/secret/cloud.google.com'
          resources:
            requests:
              cpu: 0.25
            limits:
              cpu: 1
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.09
          command:
            [
              '/cloud_sql_proxy',
              '--dir=/cloudsql',
              '-instances=zeus-176020:us-central1:zeus-prod-06947e6=tcp:5432',
              '-credential_file=/secrets/cloudsql/credentials.json',
            ]
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/cloudsql
              readOnly: true
            - name: ssl-certs
              mountPath: /etc/ssl/certs
            - name: cloudsql
              mountPath: /cloudsql
      volumes:
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
        - name: ssl-certs
          hostPath:
            path: /etc/ssl/certs
        - name: cloudsql
          ? emptyDir
        - name: nfs
          persistentVolumeClaim:
            claimName: nfs
        - name: service-account
          secret:
            secretName: 'zeus-service-account'
