kubernetes/zeus/zeus/worker-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: worker
  namespace: default
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  minReadySeconds: 5
  revisionHistoryLimit: 10
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: zeus
          image: gcr.io/zeus-176020/zeus:latest
          imagePullPolicy: Always
          args: ['zeus', 'worker', '--cron']
          readinessProbe:
            exec:
              command:
                - test
                - '`ps aux | grep "[z]eus worker"`'
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            exec:
              command:
                - test
                - '`ps aux | grep "[z]eus worker"`'
            initialDelaySeconds: 30
            periodSeconds: 5
          volumeMounts:
            - name: nfs
              mountPath: '/mnt/repo-cache'
            - name: 'service-account'
              mountPath: '/var/run/secret/cloud.google.com'
          resources:
            requests:
              cpu: 4
            limits:
              cpu: 4
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.09
          command:
            [
              '/cloud_sql_proxy',
              '--dir=/cloudsql',
              '-instances=zeus-176020:us-central1:zeus-prod-06947e6=tcp:5432',
              '-credential_file=/secrets/cloudsql/credentials.json',
            ]
          volumeMounts:
            - name: cloudsql-instance-credentials
              mountPath: /secrets/cloudsql
              readOnly: true
            - name: ssl-certs
              mountPath: /etc/ssl/certs
            - name: cloudsql
              mountPath: /cloudsql
      volumes:
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
        - name: ssl-certs
          hostPath:
            path: /etc/ssl/certs
        - name: cloudsql
          ? emptyDir
        - name: nfs
          persistentVolumeClaim:
            claimName: nfs
        - name: service-account
          secret:
            secretName: 'zeus-service-account'
