kubernetes/zeus/zeus/worker.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: worker
  namespace: default
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 6
      maxUnavailable: 2
  minReadySeconds: 5
  revisionHistoryLimit: 10
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: zeus
          image: gcr.io/zeus-176020/zeus:latest
          imagePullPolicy: Always
          args: ['zeus', 'worker', '--cron']
          readinessProbe:
            exec:
              command:
                - test
                - '`ps aux | grep "[z]eus worker"`'
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            exec:
              command:
                - test
                - '`ps aux | grep "[z]eus worker"`'
            initialDelaySeconds: 30
            periodSeconds: 5
          volumeMounts:
            - name: 'service-account'
              mountPath: '/var/run/secret/cloud.google.com'
          resources:
            requests:
              cpu: 1200m
              memory: 1500Mi
            limits:
              cpu: 2000m
              memory: 2000Mi
      volumes:
        - name: service-account
          secret:
            secretName: 'zeus-service-account'
