kubernetes/zeus/zeus/pubsub-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pubsub
  namespace: default
  labels:
    app: pubsub
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: pubsub
