kubernetes/zeus/zeus/pubsub.yaml
apiVersion: v1
kind: Service
metadata:
  name: pubsub
  namespace: default
  labels:
    app: pubsub
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: pubsub
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pubsub
  namespace: default
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  minReadySeconds: 5
  revisionHistoryLimit: 10
  template:
    metadata:
      labels:
        app: pubsub
    spec:
      containers:
        - name: zeus
          image: gcr.io/zeus-176020/zeus:latest
          imagePullPolicy: Always
          args: ['zeus', 'pubsub', '--host=0.0.0.0', '--port=8080']
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            periodSeconds: 30
          volumeMounts:
            - name: repo-cache
              mountPath: '/tmp/repo-cache'
            - name: 'service-account'
              mountPath: '/var/run/secret/cloud.google.com'
          resources:
            requests:
              cpu: 0.25
            limits:
              cpu: 1
      volumes:
        - name: service-account
          secret:
            secretName: 'zeus-service-account'
        - name: repo-cache
          hostPath:
            path: /tmp/repo-cache
