kubernetes/zeus/zeus/vcs-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: vcs-server
  namespace: default
  labels:
    app: vcs-server
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: vcs-server
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vcs-server
  namespace: default
  labels:
    app: vcs-server
spec:
  selector:
    matchLabels:
      app: vcs-server
  serviceName: vcs-server
  replicas: 3
  updateStrategy:
    type: RollingUpdate
    # rollingUpdate:
    #   maxSurge: 2
    #   maxUnavailable: 1
  # minReadySeconds: 5
  # revisionHistoryLimit: 10
  template:
    metadata:
      labels:
        app: vcs-server
    spec:
      containers:
        - name: zeus
          image: gcr.io/zeus-176020/zeus:latest
          imagePullPolicy: Always
          args: ['zeus', 'vcs-server', '--host=0.0.0.0', '--port=8080']
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            periodSeconds: 30
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 60
            timeoutSeconds: 1
          volumeMounts:
            - name: repo-cache
              mountPath: '/tmp/repo-cache'
            - name: 'service-account'
              mountPath: '/var/run/secret/cloud.google.com'
          resources:
            requests:
              cpu: 1200m
              memory: 2400Mi
            limits:
              cpu: 2000m
              memory: 3400Mi
      volumes:
        - name: service-account
          secret:
            secretName: 'zeus-service-account'
  volumeClaimTemplates:
    - metadata:
        name: repo-cache
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 5000Gi
