kubernetes/zeus/zeus/web.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: default
  labels:
    app: web
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: web
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: web
  namespace: default
spec:
  replicas: 6
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 4
      maxUnavailable: 2
  minReadySeconds: 5
  revisionHistoryLimit: 10
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: zeus
          image: gcr.io/zeus-176020/zeus:latest
          imagePullPolicy: Always
          args: ['zeus', 'web', '--host=0.0.0.0', '--port=8080']
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            periodSeconds: 30
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 60
            timeoutSeconds: 1
          volumeMounts:
            - name: 'service-account'
              mountPath: '/var/run/secret/cloud.google.com'
            - name: repo-cache
              mountPath: /tmp/repo-cache
          resources:
            requests:
              cpu: 900m
              memory: 600Mi
            limits:
              cpu: 1000m
              memory: 800Mi
      volumes:
        - name: service-account
          secret:
            secretName: 'zeus-service-account'
        - name: repo-cache
          hostPath:
            path: /tmp/repo-cache
