kubernetes/zeus/zeus/web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web
  namespace: default
  labels:
    app: web
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "zeus-ci-ip"
spec:
  tls:
  - hosts:
    - zeus.ci
    - updates.zeus.ci
    secretName: zeus-tls
  rules:
  - host: zeus.ci
    http:
      paths:
      - path: /*
        backend:
          serviceName: web
          servicePort: 80
  - host: updates.zeus.ci
    http:
      paths:
      - path: /*
        backend:
          serviceName: pubsub
          servicePort: 80
